added the compelte auth

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
@@ -37,6 +38,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
