--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "tsx src/server.ts",
     "dev": "nodemon --exec tsx src/server.ts",
+    "build": "tsc",
+    "vercel-build": "echo 'Build step for Vercel'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "db:push": "drizzle-kit push --config=drizzle.config.ts",
@@ -19,6 +21,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "bcrypt": "^6.0.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
